# lagoon

./: .gitignore  Cargo.toml  deploy.toml  justfile
.cargo/: config.toml
apple/Buoy/: Buoy.entitlements  Info.plist
apple/Buoy/Buoy/: BuoyApp.swift  ContentView.swift  Sync.swift
apple/Buoy/Buoy.xcodeproj/: project.pbxproj
apple/Lagoon/Lagoon/: Sync.swift
crates/apple-ffi/: Cargo.toml
crates/apple-ffi/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  saved_search.rs  store.rs  sync.rs  tags.rs  thought.rs
crates/embed-spike/: Cargo.toml  README.md
crates/embed-spike/src/: main.rs
crates/linux/: Cargo.toml
crates/linux/src/: main.rs
crates/server/: lagoon.toml
crates/server/src/: api.rs  main.rs
docs/: plan-buildout.md  plan-poc.md
scripts/: smoke-test.swift
web/: index.html
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/: SavedSearches.tsx  TaggedText.tsx  ThoughtRow.tsx
web/src/lib/: tags.ts  theme.ts
