[workspace]
resolver = "3"
members = ["crates/core"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
publish = false
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
