[package]
name = "buoy-linux"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "buoy"
path = "src/main.rs"

[dependencies]
buoy-core = { path = "../core" }
gtk = { package = "gtk4", version = "0.10" }

[lints]
workspace = true
